tests/fixtures/invalid/none_bitxor_str.py
# Cannot bitwise XOR None and Str
x: None = None ^ "hello"
